--- a/templates/list.html
+++ b/templates/list.html
@@ -2,9 +2,11 @@
 
 {% block panel %}
 
+    
     {{gists}}
     {% for gist in gists
         if not gist['description'] == ""
+           and "files" in gist
            and gist['files'][gist['files'].keys()[0]]['language'] == "Markdown" %}
 
 
