Pagination and truncation fixes

--- a/templates/list.html
+++ b/templates/list.html
@@ -2,33 +2,41 @@
 
 {% block panel %}
 
-    {% for gist in gists
-        if not gist['description'] == ""
-           and gist['files'][gist['files'].keys()[0]]['language'] == "Markdown" %}
-
+    {% for gist in gists%}
 
         <div class="blog-post">
-            <div class='container'>
-                <div class='col-lg-1'><img src="{{gist['owner']['avatar_url']}}" style='width:50px'/></div>
-                <div class='col-lg-11'>
-                    <h2 class="blog-post-title">{{gist['description']}}</h2>
-                    <p class="blog-post-meta">
-                        {{gist['created_at']|datetimeformat}} by
-                        <a href="#">{{username|capitalize}}</a>
 
-                        Comments ({{gist['comments']}})
-                    </p>
+            {% if gist is not none %}
+                <div class='container'>
+                    <div class='col-lg-1'><img src="{{gist['owner']['avatar_url']}}" style='width:50px'/></div>
+                    <div class='col-lg-11'>
+                        <h2 class="blog-post-title">{{gist['description']}}</h2>
+                        <p class="blog-post-meta">
+                            {{gist['created_at']|datetimeformat}} by
+                            <a href="#">{{username|capitalize}}</a>
+
+                            Comments ({{gist['comments']}})
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class='blog-data'>
-                <div class='condensed'>
-                    {{gist['files'][gist['files'].keys()[0]]['raw_url']|get_as_markdown|safe}}
+                <div class='blog-data'>
+                    <div class='condensed'>
+                        {{gist['files'][gist['files'].keys()[0]]['raw_url']|get_as_markdown(100)|safe}}
+                    </div>
+                    ...
+                    <a style='float:right' href="{{username}}/{{gist['id']}}">Read the whole post</a>
                 </div>
-                <a style='float:right' href="{{username}}/{{gist['id']}}">Read the whole post</a>
-            </div>
+            {% endif %}
         </div>
 
-        <p></p>
     {% endfor %}
+    <div class='container' style='padding:50px'>
+        {% if None not in gists %}
+            <a href="/{{username}}/page/{{page+1}}">Older Posts</a>
+        {% else %}
+            You have reached the end of {{username}}'s posts. 
+            <a href="/{{username}}">Start at the beginning</a>
+        {% endif %}
+    </div>
 
 {% endblock %}
