Comments and refactoring

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,7 +41,7 @@
 
         <div class='row'>
         {% block content %}
-            <div class='col-sm-8 blog-main'>
+            <div class='blog-main'>
             {% block panel %}{% endblock %}
             </div>
         {% endblock %}
