--- a/templates/list.html
+++ b/templates/list.html
@@ -8,23 +8,23 @@
 
             {% if gist is not none %}
                 <div class='container'>
-                    <div class='col-lg-1'><img src="{{gist['owner']['avatar_url']}}" style='width:50px'/></div>
+                    <div class='col-lg-1'><img src="{{gist.owner['avatar_url']}}" style='width:50px'/></div>
                     <div class='col-lg-11'>
-                        <h2 class="blog-post-title">{{gist['description']}}</h2>
+                        <h2 class="blog-post-title">{{gist.description}}</h2>
                         <p class="blog-post-meta">
-                            {{gist['created_at']|datetimeformat}} by
+                            {{gist.created_at|datetimeformat}} by
                             <a href="#">{{username|capitalize}}</a>
 
-                            Comments ({{gist['comments']}})
+                            Comments ({{gist.number_comments}})
                         </p>
                     </div>
                 </div>
                 <div class='blog-data'>
                     <div class='condensed'>
-                        {{gist['files'][gist['files'].keys()[0]]['raw_url']|get_as_markdown(100)|safe}}
+                        {{gist.parsed(100)|safe}}
                     </div>
                     ...
-                    <a style='float:right' href="{{username}}/{{gist['id']}}">Read the whole post</a>
+                    <a style='float:right' href="{{username}}/{{gist.id}}">Read the whole post</a>
                 </div>
             {% endif %}
         </div>
@@ -34,7 +34,7 @@
         {% if None not in gists %}
             <a href="/{{username}}/page/{{page+1}}">Older Posts</a>
         {% else %}
-            You have reached the end of {{username}}'s posts. 
+            You have reached the end of {{username}}'s posts.
             <a href="/{{username}}">Start at the beginning</a>
         {% endif %}
     </div>
