--- a/templates/show.html
+++ b/templates/show.html
@@ -1,26 +1,56 @@
 {% extends "layout.html" %}
 
 {% block panel %}
-    <div class="blog-post">
-            <div class='container'>
-                <div class='col-lg-1'><img src="{{gist['owner']['avatar_url']}}" style='width:50px'/></div>
-                <div class='col-lg-11'>
-                    <h2 class="blog-post-title">{{gist['description']}}</h2>
-                    <p class="blog-post-meta">
-                        {{gist['created_at']|datetimeformat}} by
-                        <a href="#">{{username|capitalize}}</a>
+<div class="blog-post">
+    <div class='container'>
+        <div class='col-lg-1'><img src="{{gist.owner['avatar_url']}}" style='width:50px'/></div>
+        <div class='col-lg-11'>
+            <h2 class="blog-post-title">{{gist.description}}</h2>
+            <p class="blog-post-meta">
+                {{gist.created_at|datetimeformat}} by
+                <a href="#">{{username|capitalize}}</a>
 
-                        Comments ({{gist['comments']}})
-                    </p>
-                </div>
-            </div>
-            <div class='blog-data'>
-                {{gist['files'][gist['files'].keys()[0]]['raw_url']|get_as_markdown|safe}}
-                <a style='float:right' href="/{{username}}">Back to the list</a>
-            </div>
+                Comments ({{gist.comments|length}})
+            </p>
+        </div>
+    </div>
+
+    <div class='row' style=''>
+
+        <div class='col-md-8'>
+            {{gist.parsed()|safe}}
         </div>
 
-        <p></p>
+        <div class='col-md-4 well'>
+            <h3>Comments</h3>
+            {% for comment in gist.comments %}
+                <div class='well' style='background-color:white;'>
+                    <div class='row'>
+                        <div class='col-lg-2'>
+                            <img src="{{comment.user['avatar_url']}}" style='width:30px'/>
+                        </div>
+                        <div class='col-lg-9'>
+                            <small class='blog-post-meta'>
+                                {{comment.user['login']}}
+                                on {{comment.created_at|datetimeformat}}
+                            </small>
+                        </div>
+
+                    </div>
+                    <small>{{comment.body}}</small>
+                </div>
+            {% endfor %}
+            {% if gist.number_comments == 0 %}
+            <small>None yet...</small>
+            {% endif %}
+
+        </div></div>
+
+        <a style='float:right' href="/{{username}}">Back to the list</a>
+    </div>
+</div>
+
+<p></p>
 
 
 {% endblock %}
